# python-ubicloud-test

./: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
.github/workflows/: build.yml
python_ubicloud_test/: main.py
